@@ -114,14 +114,16 @@ default_permissions
 allow_other
 
   This option overrides the security measure restricting file access
-  to the user mounting the filesystem.  This option is by default only
-  allowed to root, but this restriction can be removed with a
-  configuration option described in the previous section.
+  to the user mounting the filesystem.  So all users (including root)
+  can access the files.  This option is by default only allowed to
+  root, but this restriction can be removed with a configuration
+  option described in the previous section.
 
 allow_root
 
   This option is similar to 'allow_other' but file access is limited
-  to the user mounting the filesystem and root.
+  to the user mounting the filesystem and root.  This option and
+  'allow_other' are mutually exclusive.
 
 kernel_cache
 
