@@ -1,3 +1,8 @@
+2005-07-07  Miklos Szeredi <miklos@szeredi.hu>
+
+	* lib: don't allow both 'allow_other' and 'allow_root' options to
+	be given
+
 2005-07-06  Miklos Szeredi <miklos@szeredi.hu>
 
 	* fusermount: check if mountpoint is empty (only '.' and '..' for
